--- a/02.md
+++ b/02.md
@@ -12,7 +12,7 @@ Scrum and most other so-called “Agile” methods, and the methods before them,
 
 As we think here about how to organize software development, let’s turn the roles thinking upside down and inside out. Let’s think about a team of people who have come together to do something, and how they, and things around them, should be organized. Let’s think about the things they do, and maybe to worry too much about just who does it or what their job title is.  
 
-Agile Software Development is about developing software. The Manifesto refers to “working software” several times, and in what we call the Increment, that notion is central to this book. An Agile Software Development Team has as its core purpose the creation of software.
+Agile Software Development is about developing software. The Manifesto refers to “working software” several times, and that notion, the Increment, is central to this book. An Agile Software Development Team has as its core purpose the creation of software.
 
 Now as soon as we say that, we have to reach beyond “creation of software” as the purpose. The software is there to solve a problem, or to support users in carrying out some other purpose. The software may be embedded in some kind of device, such as a heart pacemaker, or a vehicle, or a phone or wristwatch.
 
@@ -52,7 +52,7 @@ That’s not to say that we’re opposed to control. Not at all: control, especi
 
 To help avoid having an individual named as the “owner”, the “leader” or the “master”, and to enable everyone to lead when they have leadership in them, we’ll try to speak in terms of responsibilities and activities rather than named roles. We won’t manage that entirely, because sometimes we’ll need to connect to existing methods and processes which have those role names.  
 
-“There's no word for accountability in Finnish. Accountability is something that is left when responsibility has been subtracted.” --Pasi Sahlberg
+> “There's no word for accountability in Finnish. Accountability is something that is left when responsibility has been subtracted.” --Pasi Sahlberg
 
 At first encounter, I’m inclined to feel that a call for “accountability” reflects a lack of trust in a situation. But I’m reminded of the Russian proverb that President Reagan adopted: “Trust, but verify”. (*Doveryai, no proveryai.*) So I try to translate a call for accountability into a call for solid information. 
 
