--- a/04.md
+++ b/04.md
@@ -10,7 +10,13 @@ It seems to me that safety is somewhat subsumed under the notion of autonomy, bu
 
 Safety is important, and it needs to be real. If we tell people that they’re safe, and they’re not, they’ll quickly find out, and things will be worse than before. So GeePaw is wise to include this value.  
 
-GeePaw Hill also offers the value of “rhythm”. He points out that people seem to work better within regular rhythmic time cycles. We tend to like going to work at the same time, eating our meals at the same time, and so on. It is this sense of rhythmic cycles that results in suggestions that our development process might best have weekly or biweekly iterations, monthly and daily meetings, and so on.   
+GeePaw Hill also offers the value of “rhythm”. He points out that people seem to work better within regular rhythmic time cycles. We tend to like going to work at the same time, eating our meals at the same time, and so on. It is this sense of rhythmic cycles that results in suggestions that our development process might best have weekly or biweekly iterations, monthly and daily meetings, and so on. 
+
+It seems to me that there’s a balance to be found here, as in most values. We’ve probably all experienced that feeling of “Oh, no, it’s Monday and I have to go to work”, or even “Oh, no, it’s Friday and I have to go out for drinks”. It’s possible for any rhythm to become a drag. Ravel’s *Bolero* comes to mind. So we may need to change things up.
+
+Similarly, I can imagine that a rhythm might cause trouble by being out of sync with our lives. A meeting that shifted one hour every day would probably be a problem, especially when it started showing up at 1 AM, 2 AM, … 
+
+Rhythm is surely important, valuable, and worth using. At this writing, GeePaw isn’t certain just what to say about it, and neither am I. My best advice at the moment is to keep rhythm in mind, and be ready to change it up from time to time.  
 
 Clearly, the more different ideas we have, the better we’ll be able to pick out really good ideas–at least within reason. It’s certainly possible to have too many ideas, or too many weird ideas, but by and large, my experience is that a few more good ideas would have been useful.
 
