--- a/07.md
+++ b/07.md
@@ -12,7 +12,7 @@ I say that the increment is made of running, tested, software. By “running”,
 
 I say that the Increment is “tested”. I could just as well say “working, really truly provably working”, but it wouldn’t scan. The point is that the Increment is as close to free of defects as we want the “final” product to be, and if you expect me to use your product, that means as close to zero defects as we can get. 
 
->Pro tip: If your open defects are recorded in Jira, or in any form other than one sticky note or index card, you have too many of them. Stop adding and fix things.
+> >Pro tip: If your open defects are recorded in Jira, or in any form other than one sticky note or index card, you have too many of them. Stop adding and fix things.
 Today, the best way I know to have software that really works is extensive testing. We’ll discuss ways of doing that later on. For now, it’s got to be working, and you’ve got to be able to prove it, so that means it had better be tested.
   
 
@@ -32,7 +32,7 @@ And the sooner we put in a couple of those missing features, the sooner we can s
 
 The point of the Increment, the point of “running tested features” is to focus all our planning and reporting around a thing that exists, a thing whose only reason for not being out there creating value is that it lacks a few critical features. The idea is to make the product so tangible that it gets us thinking:
 
-If we just added this one more thing, we could ship this puppy!
+> If we just added this one more thing, we could ship this puppy!
 
 If you can do what we’ve said so far, you’re ready to go. The rest is hints, guidance, examples. Valuable, we certainly hope. But the core is the Increment, running, tested, features.  
 
@@ -40,7 +40,7 @@ The so-called “Agile” method inaccurately named “SAFe” has the notion of
 
 But it’s good advice, just not good enough. The advice here is:
 
-Deliver continuously, ship on demand.  
+> Deliver continuously, ship on demand.  
 
 In the early days of “Agile”, over two decades ago, we thought that having a version ready every month was OK, three weeks was good, two weeks was amazing. Ready every week? You must be gods!
 
